# iconmate

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  TODOS.md  cliff.toml  dist-workspace.toml  folder-system-plan.md  iconify-cli-plan.md  iconmate.jsonc  iconmateglobal.schema.json  iconmatelocal.schema.json  install.sh  manual_test.sh  tag_and_release.sh
.claude/: settings.local.json
.claude/commands/: audit-skills.md
.github/workflows/: release.yml
_docs/: flutter-preset-plan.md  iconmate-sync-plan.md
config-gen/: package.json
config-gen/src/: generate.ts  schema.ts  types.ts
npm/: .gitignore  README.md  bin.js  install.js  package.json
scripts/: tag_and_release.sh
skills/iconmate/: SKILL.md
src/: app_state.rs  config.rs  flutter.rs  form_input.rs  iconify.rs  lib.rs  main.rs  scroll.rs  sync.rs  tui.rs  utils.rs  viewer.rs
src/views/: add_popup.rs  delete_popup.rs  help_popup.rs  iconify_search_popup.rs  main.rs  mod.rs  rename_popup.rs  sync_popup.rs  theme.rs
tests/: integration_test.rs
