[package]
name = "iconmate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
inquire = "0.9.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_fs = "1.0"
predicates = "3.0"
