[package]
name = "iconmate"
description="CLI to fetch icons and save them into your Vite, NextJS, or similar TypeScript project"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Blankeos/iconmate"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
inquire = "0.9.1"
regex = "1.11.3"
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
tui-textarea = "0.7.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_fs = "1.0"
predicates = "3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
